# hydra

./: .ammanrc.cjs  .gitignore  .prettierignore  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  lerna.json  notstacc.MD  package-lock.json  package.json  tsconfig.json  wat.ts
.github/actions/install-solana/: action.yml
.github/actions/install-soteria/: action.yml
.github/workflows/: test.yml
.yarn/releases/: yarn.sucks
cli/hydra_cli/: Cargo.toml
cli/hydra_cli/src/: main.rs
migrations/: deploy.ts
programs/fanout/: Cargo.toml
programs/fanout/src/: account.rs  arg.rs  error.rs  lib.rs  state.rs  utils.rs
programs/fanout/src/processors/: mod.rs
programs/fanout/src/processors/add_member/: arg.rs  mod.rs  nft.rs  token.rs  wallet.rs
programs/fanout/src/processors/distribute/: nft_member.rs  token_member.rs  wallet_member.rs
programs/fanout/src/processors/init/: init_for_mint.rs  init_parent.rs
programs/fanout/src/processors/remove_member/: mod.rs
programs/fanout/src/processors/signing/: sign_metadata.rs
programs/fanout/src/processors/stake/: mod.rs  set.rs  token.rs  token_mint.rs  unstake.rs
programs/fanout/src/processors/transfer_shares/: transfer_shares.rs
programs/fanout/src/utils/: mod.rs
programs/fanout/src/utils/logic/: calculation.rs  distribution.rs  mod.rs  transfer.rs
programs/fanout/src/utils/validation/: mod.rs
programs/hydra/: Cargo.toml
programs/hydra/src/: error.rs  lib.rs  state.rs
programs/hydra/src/processors/: mod.rs
programs/hydra/src/processors/add_member/: nft.rs  wallet.rs
programs/hydra/src/processors/distribute/: nft_member.rs  token_member.rs  wallet_member.rs
programs/hydra/src/processors/init/: init_for_mint.rs  init_parent.rs  mod.rs  transfer_to_hodling.rs
programs/hydra/src/processors/remove_member/: mod.rs  remove_member.rs
programs/hydra/src/processors/signing/: sign_metadata.rs
programs/hydra/src/processors/stake/: set.rs  set_for.rs  unstake.rs
programs/hydra/src/processors/transfer_shares/: mod.rs  transfer_shares.rs
programs/hydra/src/utils/: mod.rs
programs/hydra/src/utils/logic/: calculation.rs  distribution.rs  transfer.rs
programs/hydra/src/utils/validation/: mod.rs
scripts/: api-gen-ts.cjs
spl-token/lib/cjs/: constants.js  constants.js.map  errors.js  errors.js.map  index.js  index.js.map
spl-token/lib/cjs/actions/: createAccount.js  createAccount.js.map  createNativeMint.js  createNativeMint.js.map  createWrappedNativeAccount.js  createWrappedNativeAccount.js.map  index.js  index.js.map
spl-token/lib/cjs/extensions/: extensionType.js  extensionType.js.map  index.js  index.js.map  mintCloseAuthority.js  mintCloseAuthority.js.map
spl-token/lib/cjs/instructions/: createNativeMint.js  createNativeMint.js.map  index.js  index.js.map  initializeMintCloseAuthority.js  initializeMintCloseAuthority.js.map  types.js  types.js.map
spl-token/lib/cjs/state/: account.js  account.js.map  mint.js  mint.js.map
spl-token/lib/esm/: constants.js.map  constants.mjs  errors.js.map  errors.mjs  index.js.map  index.mjs
spl-token/lib/esm/actions/: approve.js.map  approve.mjs  approveChecked.js.map  approveChecked.mjs  burn.js.map  burn.mjs  burnChecked.js.map  burnChecked.mjs  closeAccount.js.map  closeAccount.mjs  createAccount.js.map  createAccount.mjs  createAssociatedTokenAccount.js.map  createAssociatedTokenAccount.mjs  createMint.js.map  createMint.mjs  createMultisig.js.map  createMultisig.mjs  createNativeMint.js.map  createNativeMint.mjs  createWrappedNativeAccount.js.map  createWrappedNativeAccount.mjs  freezeAccount.js.map  freezeAccount.mjs  getOrCreateAssociatedTokenAccount.js.map  getOrCreateAssociatedTokenAccount.mjs  index.js.map  index.mjs  internal.js.map  mintTo.js.map  mintTo.mjs  mintToChecked.js.map  mintToChecked.mjs  revoke.js.map  revoke.mjs  setAuthority.js.map  setAuthority.mjs  syncNative.js.map  syncNative.mjs  thawAccount.js.map  (+5 more)
spl-token/lib/types/: constants.d.ts  errors.d.ts
tests/: blah.ts  fanout.ts  nft.test.ts  sign.test.ts  token.test.ts  token.test.tsold  wallet.test.ts
tests/utils/: metaplex.ts  scenarios.ts  token.ts
(+77 files in other folders)
