[package]
name = "fanout"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "fanout"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
spl-token = "3.2.0"
mpl-token-metadata = {git="https://github.com/metaplex-foundation/metaplex-program-library", package="mpl-token-metadata", branch="master"}
 