[package]
name = "hydra_wallet"
version = "0.2.3"
description = "Collective account pooling, fan out wallet, dao treasury, all of the things you need to FAN OUT"
edition = "2018"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "hydra"

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
clockwork-sdk = { version = "1.2.0" }
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
spl-token = {version="3.3.0", features = [ "no-entrypoint" ]}
mpl-token-metadata = {version="1.2.7", features = [ "no-entrypoint" ]}
spl-associated-token-account = "1.0.5"